// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Widgets/Gallery _4x3Image smoke-test 1`] = `
<main class="-storybook-preview-module__root--fQckk inter-normal">
  <h2 class="src-widgets-Gallery-Gallery-module__name--bagbP">
    Gallery
  </h2>
  <ul class="src-widgets-Gallery-Gallery-module__images--c5hew">
    <li>
      <img alt="Placeholder image"
           fetchpriority="high"
           width="800"
           height="600"
           decoding="async"
           data-nimg="1"
           class="src-components-Image-Image-module__image--gXjYq"
           srcset="/static/media/_4x3.58bee57f.png?w=828&amp;q=75 1x, /static/media/_4x3.58bee57f.png?w=1920&amp;q=75 2x"
           src="/static/media/_4x3.58bee57f.png?w=1920&amp;q=75"
           style="color: transparent;"
      >
    </li>
  </ul>
</main>
`;

exports[`Widgets/Gallery _16x9Image smoke-test 1`] = `
<main class="-storybook-preview-module__root--fQckk inter-normal">
  <h2 class="src-widgets-Gallery-Gallery-module__name--bagbP">
    Gallery
  </h2>
  <ul class="src-widgets-Gallery-Gallery-module__images--c5hew">
    <li>
      <img alt="Placeholder image"
           fetchpriority="high"
           width="1920"
           height="1080"
           decoding="async"
           data-nimg="1"
           class="src-components-Image-Image-module__image--gXjYq"
           srcset="/static/media/_16x9.d50e36d3.png?w=1920&amp;q=75 1x, /static/media/_16x9.d50e36d3.png?w=3840&amp;q=75 2x"
           src="/static/media/_16x9.d50e36d3.png?w=3840&amp;q=75"
           style="color: transparent;"
      >
    </li>
  </ul>
</main>
`;

exports[`Widgets/Gallery LongName smoke-test 1`] = `
<main class="-storybook-preview-module__root--fQckk inter-normal">
  <h2 class="src-widgets-Gallery-Gallery-module__name--bagbP">
    Gallery with a really long name that should not be truncated
  </h2>
  <ul class="src-widgets-Gallery-Gallery-module__images--c5hew">
    <li>
      <img alt="Placeholder image"
           fetchpriority="high"
           width="1920"
           height="1080"
           decoding="async"
           data-nimg="1"
           class="src-components-Image-Image-module__image--gXjYq"
           srcset="/static/media/_16x9.d50e36d3.png?w=1920&amp;q=75 1x, /static/media/_16x9.d50e36d3.png?w=3840&amp;q=75 2x"
           src="/static/media/_16x9.d50e36d3.png?w=3840&amp;q=75"
           style="color: transparent;"
      >
    </li>
  </ul>
</main>
`;

exports[`Widgets/Gallery MultipleFormats smoke-test 1`] = `
<main class="-storybook-preview-module__root--fQckk inter-normal">
  <h2 class="src-widgets-Gallery-Gallery-module__name--bagbP">
    Gallery
  </h2>
  <ul class="src-widgets-Gallery-Gallery-module__images--c5hew">
    <li>
      <img alt="Placeholder image"
           fetchpriority="high"
           width="1080"
           height="1080"
           decoding="async"
           data-nimg="1"
           class="src-components-Image-Image-module__image--gXjYq"
           srcset="/static/media/_1x1.ea48a62d.png?w=1080&amp;q=75 1x, /static/media/_1x1.ea48a62d.png?w=3840&amp;q=75 2x"
           src="/static/media/_1x1.ea48a62d.png?w=3840&amp;q=75"
           style="color: transparent;"
      >
    </li>
    <li>
      <img alt="Placeholder image"
           fetchpriority="high"
           width="800"
           height="600"
           decoding="async"
           data-nimg="1"
           class="src-components-Image-Image-module__image--gXjYq"
           srcset="/static/media/_4x3.58bee57f.png?w=828&amp;q=75 1x, /static/media/_4x3.58bee57f.png?w=1920&amp;q=75 2x"
           src="/static/media/_4x3.58bee57f.png?w=1920&amp;q=75"
           style="color: transparent;"
      >
    </li>
    <li>
      <img alt="Placeholder image"
           fetchpriority="high"
           width="1920"
           height="1080"
           decoding="async"
           data-nimg="1"
           class="src-components-Image-Image-module__image--gXjYq"
           srcset="/static/media/_16x9.d50e36d3.png?w=1920&amp;q=75 1x, /static/media/_16x9.d50e36d3.png?w=3840&amp;q=75 2x"
           src="/static/media/_16x9.d50e36d3.png?w=3840&amp;q=75"
           style="color: transparent;"
      >
    </li>
  </ul>
</main>
`;

exports[`Widgets/Gallery MultipleImages smoke-test 1`] = `
<main class="-storybook-preview-module__root--fQckk inter-normal">
  <h2 class="src-widgets-Gallery-Gallery-module__name--bagbP">
    Gallery
  </h2>
  <ul class="src-widgets-Gallery-Gallery-module__images--c5hew">
    <li>
      <img alt="Placeholder image"
           fetchpriority="high"
           width="1920"
           height="1080"
           decoding="async"
           data-nimg="1"
           class="src-components-Image-Image-module__image--gXjYq"
           srcset="/static/media/_16x9.d50e36d3.png?w=1920&amp;q=75 1x, /static/media/_16x9.d50e36d3.png?w=3840&amp;q=75 2x"
           src="/static/media/_16x9.d50e36d3.png?w=3840&amp;q=75"
           style="color: transparent;"
      >
    </li>
    <li>
      <img alt="Placeholder image"
           fetchpriority="high"
           width="1920"
           height="1080"
           decoding="async"
           data-nimg="1"
           class="src-components-Image-Image-module__image--gXjYq"
           srcset="/static/media/_16x9.d50e36d3.png?w=1920&amp;q=75 1x, /static/media/_16x9.d50e36d3.png?w=3840&amp;q=75 2x"
           src="/static/media/_16x9.d50e36d3.png?w=3840&amp;q=75"
           style="color: transparent;"
      >
    </li>
    <li>
      <img alt="Placeholder image"
           fetchpriority="high"
           width="1920"
           height="1080"
           decoding="async"
           data-nimg="1"
           class="src-components-Image-Image-module__image--gXjYq"
           srcset="/static/media/_16x9.d50e36d3.png?w=1920&amp;q=75 1x, /static/media/_16x9.d50e36d3.png?w=3840&amp;q=75 2x"
           src="/static/media/_16x9.d50e36d3.png?w=3840&amp;q=75"
           style="color: transparent;"
      >
    </li>
  </ul>
</main>
`;

exports[`Widgets/Gallery Playground smoke-test 1`] = `
<main class="-storybook-preview-module__root--fQckk inter-normal">
  <h2 class="src-widgets-Gallery-Gallery-module__name--bagbP">
    Gallery
  </h2>
  <ul class="src-widgets-Gallery-Gallery-module__images--c5hew">
    <li>
      <img alt="Placeholder image"
           fetchpriority="high"
           width="1920"
           height="1080"
           decoding="async"
           data-nimg="1"
           class="src-components-Image-Image-module__image--gXjYq"
           srcset="/static/media/_16x9.d50e36d3.png?w=1920&amp;q=75 1x, /static/media/_16x9.d50e36d3.png?w=3840&amp;q=75 2x"
           src="/static/media/_16x9.d50e36d3.png?w=3840&amp;q=75"
           style="color: transparent;"
      >
    </li>
  </ul>
</main>
`;

exports[`Widgets/Gallery SingleImage smoke-test 1`] = `
<main class="-storybook-preview-module__root--fQckk inter-normal">
  <h2 class="src-widgets-Gallery-Gallery-module__name--bagbP">
    Gallery
  </h2>
  <ul class="src-widgets-Gallery-Gallery-module__images--c5hew">
    <li>
      <img alt="Placeholder image"
           fetchpriority="high"
           width="1920"
           height="1080"
           decoding="async"
           data-nimg="1"
           class="src-components-Image-Image-module__image--gXjYq"
           srcset="/static/media/_16x9.d50e36d3.png?w=1920&amp;q=75 1x, /static/media/_16x9.d50e36d3.png?w=3840&amp;q=75 2x"
           src="/static/media/_16x9.d50e36d3.png?w=3840&amp;q=75"
           style="color: transparent;"
      >
    </li>
  </ul>
</main>
`;

exports[`Widgets/Gallery SquareImage smoke-test 1`] = `
<main class="-storybook-preview-module__root--fQckk inter-normal">
  <h2 class="src-widgets-Gallery-Gallery-module__name--bagbP">
    Gallery
  </h2>
  <ul class="src-widgets-Gallery-Gallery-module__images--c5hew">
    <li>
      <img alt="Placeholder image"
           fetchpriority="high"
           width="1080"
           height="1080"
           decoding="async"
           data-nimg="1"
           class="src-components-Image-Image-module__image--gXjYq"
           srcset="/static/media/_1x1.ea48a62d.png?w=1080&amp;q=75 1x, /static/media/_1x1.ea48a62d.png?w=3840&amp;q=75 2x"
           src="/static/media/_1x1.ea48a62d.png?w=3840&amp;q=75"
           style="color: transparent;"
      >
    </li>
  </ul>
</main>
`;
